--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -67,7 +67,7 @@ jobs:
               {
                   "toolName": "debricked-cli",
                   "toolRepo": "debricked/cli",
-                  "tagRegex": "^v\\d.*",
+                  "tagRegex": "v.*",
                   "assetRegex": "cli_.*\\.tar\\.gz",
                   "semver": "major",
                   "binaryPlatforms": {
