chore: Add sc-client 25.* extra version properties

--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -112,6 +112,7 @@ jobs:
                       ".*": "java"
                   },
                   "extraVersionProperties": {
+                      "25.*": {"jre": "17"},
                       "24.*": {"jre": "17"},
                       "23.*": {"jre": "11"},
                       "22.*": {"jre": "11"},
